package lab;

public interface CanDoAdvertise {
    void advertise(Personage personage);
}
