package lab;

public interface CanDoService {
    void service(Personage p);
}
