package lab;

public enum Diseases {
    POISONING,
    INFECTION,
    VIRAL_DISEASE,
}
